# cpuid

./: .clang-format  CMakeLists.txt  README.md
include/celtresoft/: cpuid.hpp
src/: cpuid.cpp  cpuid_impl.cpp
